Refactoring and Matrix power